4.15

    1. Группировка сообщений в логе по приложения.

4.16

    1. Новый драйвер - Data/Mounters/JSONDB
    2. Новый драйвер - System/Profilers/Log